<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_margin="5sp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="7sp"
         android:focusableInTouchMode="true">

        <com.softnep.radiodailymail.UIutils.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_title"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_marginTop="10sp"/>

        <com.softnep.radiodailymail.UIutils.MyEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtName"
            android:hint="@string/name_nepali"
            android:inputType="textPersonName"
            android:layout_marginTop="8sp"
            android:imeOptions="actionNext"/>

        <com.softnep.radiodailymail.UIutils.MyEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtCountry"
            android:hint="@string/country_nepali"
            android:layout_marginTop="8sp"
            android:inputType="text"
            android:imeOptions="actionNext"/>

        <com.softnep.radiodailymail.UIutils.MyEditText
            android:layout_width="match_parent"
            android:layout_height="80sp"
            android:id="@+id/edtProblem"
            android:hint="@string/problem_nepali"
            android:layout_marginTop="8sp"
            android:gravity="start"
            android:lines="10"
            android:maxLines="10"
            android:inputType="text"
            android:imeOptions="actionNext"/>

        <com.softnep.radiodailymail.UIutils.MyEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtContact"
            android:hint="@string/contact_nepali"
            android:layout_marginTop="8sp"
            android:inputType="number"
            android:imeOptions="actionNext"/>

        <com.softnep.radiodailymail.UIutils.MyEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtEmail"
            android:hint="@string/email_nepali"
            android:layout_marginTop="8sp"
            android:inputType="textEmailAddress"
            android:imeOptions="actionDone"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:background="@color/blue"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_margin="25dp"
            android:id="@+id/btnSubmit"/>


</LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>
    </android.support.design.widget.CoordinatorLayout>